2019-1/231/users/4232/executions/1581_2894.log
== TEST (2019-03-21 18:19:11) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Instruções: "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8x+45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = 8x+45
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:19:25) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Instruções: "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8x + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = 8x + 45
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:22:58) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = (input("45"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8x + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = 8x + 45
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:23:26) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input(""))

# Calculo do valor a ser pago, incluindo o frete:
total = 8x + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = 8x + 45
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:24:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("x+45/8"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8x + 45

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 8
    total = 8x + 45
             ^
SyntaxError: invalid syntax
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:24:37) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input(""))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:24:41) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input(""))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.20874
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
53
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
53
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:25:16) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("var + 34"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:25:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("var + 34"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.156702
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
53
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
53
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:25:21) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("var + 34"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:25:49) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("var + 45"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("var + 100"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
53
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:26:06) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("var + 100"))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.161597
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
53
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
53
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
53
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:26:47) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("100"))

# Calculo do valor a ser pago, incluindo o frete:
total = 845

# Impressao do valor total:
print(total)
-- OUTPUT:
845
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:26:51) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("100"))

# Calculo do valor a ser pago, incluindo o frete:
total = 845

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.12862
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
845
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
845
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
845
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:29:08) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("100.0"))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:12) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("100.0"))

# Calculo do valor a ser pago, incluindo o frete:
total = var+45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.214996
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:29:32) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("100.0"))

# Calculo do valor a ser pago, incluindo o frete:
total = (var+45)

# Impressao do valor total:
print(total)
-- OUTPUT:
46.23
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:29:36) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var =float(input("100.0"))

# Calculo do valor a ser pago, incluindo o frete:
total = (var+45)

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.204329
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
46.23
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
401.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
124032.0
-- GRADE:
0%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:47:03) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var =float(input("8 * 5 + 45"))

# Calculo do valor a ser pago, incluindo o frete:
total = input("var")

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    var =float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:47:07) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var =float(input("8 * 5 + 45"))

# Calculo do valor a ser pago, incluindo o frete:
total = input("var")

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.228278
-- ERROR:
  File "/home/codebench/codes/1581/2894/main.py", line 5
    var =float(input())
    ^
IndentationError: unexpected indent

*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:47:42) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
 var =float(input("45.0"))

# Calculo do valor a ser pago, incluindo o frete:
total = input("var")

# Impressao do valor total:
print(total)
-- ERROR:
File "XXXX", line 5
    var =float(input())
    ^
IndentationError: unexpected indent
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:09) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 * var + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== TEST (2019-03-21 18:51:40) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 * var + 45

# Impressao do valor total:
print(total)
-- OUTPUT:
54.84
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
== SUBMITION (2019-03-21 18:52:20) 
-- CODE:
# Este código é apenas um ESBOÇO da solução.
# Modifique-o para atender as especificações do enunciado.

# Leitura das entradas e conversao para float:
var = float(input("Qual o valor unitario do jogo? "))

# Calculo do valor a ser pago, incluindo o frete:
total = 8 * var + 45

# Impressao do valor total:
print(total)
-- EXECUTION TIME:
0.184034
-- TEST CASE 1:
---- input:
1.23
---- correct output:
54.84
---- user output:
54.84
-- TEST CASE 2:
---- input:
356
---- correct output:
2893.0
---- user output:
2893.0
-- TEST CASE 3:
---- input:
123987.0
---- correct output:
991941.0
---- user output:
991941.0
-- GRADE:
100%
*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*-*
